Added zoom logic

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <title>HYG Database Star System</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
   <svg id="star-map" width="3200" height="2400"></svg>
-  <script src="script.js"></script>
+  <script src="scripts/draw.js"></script>
+  <script src="scripts/zoom.js"></script>
 </body>
 
 </html>
